fix hero image showing up on mobile

--- a/components/hero/hero.css
+++ b/components/hero/hero.css
@@ -34,7 +34,7 @@
     grid-template-columns: 1fr;
     height: auto;
     padding: 115px 40px 40px;
-    background: none;
+    background: none !important;
     aspect-ratio: auto;
   }
 
